--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="chat_list_button"></string>
     <string name="connect_button"></string>
     <string name="setting_button"></string>
+    <string name="title_activity_start_page">StartPage</string>
 
 </resources>
